About page and events page template

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
     <!-- <p>bleh footer blehh</p> -->
     <!-- socials links, contact email, where is toc, linktree, copyright, src -->
     <div class="section spaced">
-        <a href="https://youtube.com/clip/UgkxkaBIKdU3x_fZ7kchycBvSbQArzjly-mH?si=lvbdfPa2IwML0gHu" target="_blank" rel="noopener noreferrer">Find QSpace</a>
+        <a href="https://youtube.com/clip/UgkxkaBIKdU3x_fZ7kchycBvSbQArzjly-mH?si=lvbdfPa2IwML0gHu" target="_blank" rel="noopener noreferrer">Find QueerSpace</a>
         <a href="mailto:transoncampus.uoa@gmail.com">Email Us</a>
         <a href="/linktree/">LinkTree</a>
     </div>
