--- a/src/pages/events.astro
+++ b/src/pages/events.astro
@@ -20,8 +20,8 @@ import EventCard from '../components/EventCard.astro';
                 <EventCard
                     title="Title"
                     subtitle="Subtitle"
-                    datetime='Date and Time'
-                    style="greyBg"
+                    datetime={new Date().toLocaleString()}               
+					style="greyBg"
                     target=""
                 />
             </div>
