--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -340,7 +340,7 @@ const filteredPosts = allPosts.filter((post) => post.frontmatter.featured === tr
         position: relative; 
         width: 100%;
         background: rgb(116,76,213);
-        background-image: url('/pride.jpg');
+        background-image: url('/nyanShark.png');
         background-size: cover;
         background-position: center;
     }
