--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -9,7 +9,7 @@
 
         <ul class="navbarList">
             <li><a href="/resources/">Resources</a></li>
-            <li><a href="/events/">Events</a></li>
+            <!-- <li><a href="/events/">Events</a></li> -->
             <li><a href="/linktree/" target="_blank">LinkTree</a></li>
             <li><a href="/about/">About</a></li>
             <!-- <li><a href="/contact/">Contact</a></li> -->
