--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '../layouts/defaultLayout.astro';
 import ResourceCard from '../components/ResourceCard.astro';
+import EventCard from '../components/EventCard.astro';
 const allPosts = await Astro.glob('../pages/resources/*.md');
 const filteredPosts = allPosts.filter((post) => post.frontmatter.featured === true);
 ---
@@ -72,15 +73,30 @@ const filteredPosts = allPosts.filter((post) => post.frontmatter.featured === tr
                 </div>
             </div>
         </div>
-        <div class="events section">
+        <div class="events section orangeBg">
             <h1>Events</h1>
-            <p>upcoming events and past events here!! maybe embed a google calender or instagram feed?</p>
-            <br>
-            <p>but yea stuff here about events :) ^ would be nice then u dont have to update website just auto update from insta or w/e</p>
+            <div class="cardArea">
+                <!--{filteredPosts.slice(0, 3).map((post) => 
+                    <EventCard 
+                        title={String(post.frontmatter.title)}
+                        subtitle={String(post.frontmatter.description)}
+                        image={post.frontmatter.image}
+                        style=""
+                        target=""
+                    />
+                )}-->
+                <EventCard
+                    title="Title"
+                    subtitle="Subtitle"
+                    datetime={new Date().toLocaleString()}               
+					style="greyBg"
+                    target=""
+                />
+            </div>
         </div>
         <div class="resources section purpleBg">
             <h1>Resources</h1>
-            <div class="resourcesArea">
+            <div class="cardArea">
                 {filteredPosts.slice(0, 3).map((post) => 
                     <ResourceCard 
                         href={post.url} 
@@ -326,7 +342,7 @@ const filteredPosts = allPosts.filter((post) => post.frontmatter.featured === tr
     .splashText {
         color: white;
     }
-    .resourcesArea {
+    .cardArea {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(min(20.94rem, 100%), 1fr));
         grid-gap: 1.8rem;
