--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -82,6 +82,7 @@
     }
     .navbarList {
         list-style-type: none;
+        z-index: 25;
         margin: 0;
         padding: 0;
         overflow: hidden;
@@ -186,6 +187,8 @@
             top: var(--navbar-height);
             left: 0;
             width: 100vw;
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
             background: linear-gradient(18deg, rgba(249,222,226,1) 0%, rgba(231,164,193,1) 45%, rgba(86,203,251,1) 100%), url(https://grainy-gradients.vercel.app/noise.svg);
             box-shadow: 0 4px 12px rgba(0,0,0,0.08);
             flex-direction: column;
