--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -90,12 +90,13 @@
     }
     .navbarList li {
         float: left;
-        display: inline;
+        display: block;
         text-align: center;
         text-decoration: none;
     }
     .navbarList li a {
         text-decoration: none;
+        display: block;
         color: rgb(18, 12, 31);
     }
     .navbarList li a:hover {
@@ -172,6 +173,7 @@
         }
         .navbarList li {
             padding: 3px 8px;
+            width: 100vw;
         }
         .navbarButton {
             font-size: 1rem;
