Resources added,  README updated

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@
     </div>
     <div class="section stack">
         <a href="/"><img src="/tocIconRound.png" class="footerLogo" alt="Trans on Campus"/></a>
-        <div><a href="https://github.com/wiki-Bird/toc-website">© 2024 Trans on Campus</a></div>
+        <div><a href="https://github.com/wiki-Bird/toc-website">© 2025 Trans on Campus</a></div>
     </div>
     <div class="section">
         <a href="/discord" target="_blank" rel="noopener noreferrer">
@@ -20,12 +20,12 @@
         <a href="https://www.facebook.com/profile.php?id=100085172237348" target="_blank" rel="noopener noreferrer">
             <img src="/icons/facebook2.svg" class="footerSocial" alt="Facebook"/>
         </a>
-        <a href="https://github.com/wiki-Bird/toc-website" target="_blank" rel="noopener noreferrer">
+        <!-- <a href="https://github.com/wiki-Bird/toc-website" target="_blank" rel="noopener noreferrer">
             <img src="/icons/git.svg" class="footerSocial" alt="Source"/>
-        </a>
-        <!-- <a href="mailto:transoncampus.uoa@gmail.com" target="_blank" rel="noopener noreferrer">
-            <img src="./icons/mail.png" class="footerSocial" alt="Email"/>
         </a> -->
+         <a href="mailto:transoncampus.uoa@gmail.com" target="_blank" rel="noopener noreferrer">
+            <img src="./icons/mail.png" class="footerSocial" alt="Email"/>
+        </a>
     </div>
 </div>
 <style>
