--- a/src/pages/linktree.astro
+++ b/src/pages/linktree.astro
@@ -59,13 +59,13 @@ import Layout from '../layouts/linktreeLayout.astro';
                     />
                 </div>
 
-                <LinkCard
+                <!-- <LinkCard
                     href="https://forms.gle/QknRp4Snjd3sSJjj7"
                     title="ToC Movie Night :3"
                     subtitle=""
                     image="../movieNight.webp"
                     style=""
-                />
+                /> -->
                 <LinkCard
                     href="https://www.auckland.ac.nz/en/students/student-support/personal-support/rainbow-students/unisex-toilets-on-campus.html"
                     title="UoA Gender Neutral Bathrooms"
